fixed sign-up overlap

--- a/root/css/global.css
+++ b/root/css/global.css
@@ -1043,7 +1043,7 @@ footer>div {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 #sign-up .container {
